# pawdf

./: pyproject.toml
src/pawdf/: __init__.py
src/pawdf/array_pdf/: __init__.py  addmenu.py  array_cm.py  array_p.py  array_pdf_cli.py  do_addmenu.py  do_removemenu.py
src/pdf_tools/array_pdf/: __init__.py
