[project]
name = "pawdf"
version = "0.1.0"
description = "pdf tools"
authors = [
    { name = "PawRequest", email = "pawdf+pawrequest@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    'pypdf',
    'context-menu',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true
#[tool.hatch.build.targets.wheel]
#packages = ["array_pdf"]

[project.scripts]
add-menu = "pawdf.array_pdf:add_menu"
remove-menu = "pawdf.array_pdf:remove_menu"
print-array = "pawdf.array_pdf:main"

[tool.ruff]
line-length = 120