[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "pawdf"
version = "0.1.2"
description = "pdf tools"
authors = [
    { name = "PawRequest", email = "pawdf+pawrequest@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    'pypdf',
    'context-menu'
]


[project.scripts]
add-menu = "pawdf.array_pdf.array_cm:add_menu"
remove-menu = "pawdf.array_pdf.array_cm:remove_menu"
array-pdfs = "pawdf.array_pdf.array_pdf_cli:main"

[tool.ruff]
line-length = 120
